# qwen-image-shardedit-mlx

./: .env.example  .gitignore  LICENSE  README-CN.md  README.md  pyproject.toml
benchmarks/: benchmark_qwen_block.py  benchmark_qwen_block_dense_ab.py  benchmark_qwen_block_sweep.py  benchmark_qwen_dense_attn_out_window.py  benchmark_qwen_dense_img_ff_window.py  benchmark_qwen_dense_prefetch_probe.py  benchmark_qwen_gemm.py  benchmark_qwen_group_size_ab.py  benchmark_qwen_img_ff_kernel_spike.py  benchmark_qwen_kquant_img_ff_full_pass.py  benchmark_qwen_mlp_compile.py  benchmark_qwen_mlp_metal.py  benchmark_qwen_mlp_simdgroup.py  benchmark_qwen_mlp_steel_tiled.py  benchmark_qwen_residency.py  profile_qwen_block.py  quality_cases.json  run_qwen_edit_benchmark.sh  sweep_qwen_dense_img_ff_windows.py  verify_qwen_block_variant.py
docs/: experiment-rationale.md  installation.md  open-source-checklist.md  parameters.md  wechat-article.md
shardedit_mlx/: __init__.py  benchmark_lora.py  block_profile.py  bridge_error_correlation.py  cache_model.py  condition_token_merge.py  dense_ab_profile.py  dense_img_attn_out_window.py  dense_img_ff_profile.py  dense_img_ff_window.py  full_miss_profile.py  gemm_profile.py  gpu_utilization_sampler.py  group_size_profile.py  kernel_feasibility_profile.py  kquant_img_ff_window.py  lora_plan.py  mflux_fast_edit.py  mlp_compile_profile.py  mlp_metal_profile.py  perf_model.py  probe_escalation_analysis.py  product_cli.py  product_presets.py  q6_linear_profile.py  q6_metal_mlp.py  q6_simdgroup_mlp.py  q6_steel_mlp.py  quality_metrics.py  (+14 more)
(+50 files in other folders)
